tests/llm/fixtures/test_investigate/16_rabbitmq_split_head_network_policy/helm/rabbitmq_values.yaml
replicaCount: 3
metrics:
  enabled: True
auth:
  username: "user"
  password: "JLaOP-s@*D1s08"
  updatePassword: true
